debug custom.js files to integrate well with the project

--- a/src/index.html
+++ b/src/index.html
@@ -1,75 +1,65 @@
-<!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>AngularElectron</title>
-  <base href="">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <!-- Meta, title, CSS, favicons, etc. -->
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+    <title>CREXT | DRD</title>
 <!--
-    <link href="./assets/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="./assets/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="./assets/vendors/nprogress/nprogress.css" rel="stylesheet">
-    <link href="./assets/vendors/iCheck/skins/flat/green.css" rel="stylesheet">
+    <link href="../vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="../vendors/nprogress/nprogress.css" rel="stylesheet">
+    <link href="../vendors/iCheck/skins/flat/green.css" rel="stylesheet">
 
+    <link href="../vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
+    <link href="../vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet"/>
+    <link href="../vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
 
-    <link href="./assets/vendors/bootstrap-progressbar/css/bootstrap-progressbar-3.3.4.min.css" rel="stylesheet">
-
-    <link href="./assets/vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet"/>
-
-    <link href="./assets/vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
-
-
-    <link href="./assets/css/custom.min.css" rel="stylesheet">
+    <link href="../build/css/custom.min.css" rel="stylesheet">
    -->
 
-</head>
-<body class="nav-md">
+   <script src="assets/vendors/jquery/dist/jquery.min.js"></script>
+   <script src="assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+   <script src="assets/vendors/fastclick/lib/fastclick.js"></script>
+   <script src="assets/vendors/nprogress/nprogress.js"></script>
+   <script src="assets/vendors/Chart.js/dist/Chart.min.js"></script>
+   <script src="assets/vendors/echarts/dist/echarts.min.js"></script>
+   <script src="assets/vendors/gauge.js/dist/gauge.min.js"></script>
+   <script src="assets/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
+   <script src="assets/vendors/iCheck/icheck.min.js"></script>
+   <script src="assets/vendors/skycons/skycons.js"></script>
+   <script src="assets/vendors/Flot/jquery.flot.js"></script>
+   <script src="assets/vendors/Flot/jquery.flot.pie.js"></script>
+   <script src="assets/vendors/Flot/jquery.flot.time.js"></script>
+   <script src="assets/vendors/Flot/jquery.flot.stack.js"></script>
+   <script src="assets/vendors/Flot/jquery.flot.resize.js"></script>
+   <script src="assets/vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
+   <script src="assets/vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
+   <script src="assets/vendors/flot.curvedlines/curvedLines.js"></script>
+   <script src="assets/vendors/DateJS/build/date.js"></script>
+   <script src="assets/vendors/jqvmap/dist/jquery.vmap.js"></script>
+   <script src="assets/vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
+   <script src="assets/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
+   <script src="assets/vendors/moment/min/moment.min.js"></script>
+   <script src="assets/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
+ <script src="assets/js/custom.js"></script>
+ <script src="assets/js/site.js"></script>
+  </head>
 
-  <app-root></app-root>
-  <script src="./assets/vendors/jquery/dist/jquery.min.js"></script>
+  <body class="nav-md">
+    <div class="container body">
+      <div class="main_container">
+       <app-root></app-root>
+    </div>
 
-  <script src="./assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <!-- jQuery -->
+    <!-- <script src="assets/vendors/"></script> -->
 
-  <script src="./assets/vendors/fastclick/lib/fastclick.js"></script>
-
-  <script src="./assets/vendors/nprogress/nprogress.js"></script>
-
-  <script src="./assets/vendors/Chart.js/dist/Chart.min.js"></script>
-
-  <script src="./assets/vendors/echarts/dist/echarts.min.js"></script>
-
-  <script src="./assets/vendors/gauge.js/dist/gauge.min.js"></script>
-
-  <script src="./assets/vendors/bootstrap-progressbar/bootstrap-progressbar.min.js"></script>
-
-  <script src="./assets/vendors/iCheck/icheck.min.js"></script>
-
-  <script src="./assets/vendors/skycons/skycons.js"></script>
-
-  <script src="./assets/vendors/Flot/jquery.flot.js"></script>
-  <script src="./assets/vendors/Flot/jquery.flot.pie.js"></script>
-  <script src="./assets/vendors/Flot/jquery.flot.time.js"></script>
-  <script src="./assets/vendors/Flot/jquery.flot.stack.js"></script>
-  <script src="./assets/vendors/Flot/jquery.flot.resize.js"></script>
-
-  <script src="./assets/vendors/flot.orderbars/js/jquery.flot.orderBars.js"></script>
-  <script src="./assets/vendors/flot-spline/js/jquery.flot.spline.min.js"></script>
-  <script src="./assets/vendors/flot.curvedlines/curvedLines.js"></script>
-
-  <script src="./assets/vendors/DateJS/build/date.js"></script>
-
-  <script src="./assets/vendors/jqvmap/dist/jquery.vmap.js"></script>
-  <script src="./assets/vendors/jqvmap/dist/maps/jquery.vmap.world.js"></script>
-  <script src="./assets/vendors/jqvmap/examples/js/jquery.vmap.sampledata.js"></script>
-
-  <script src="./assets/vendors/moment/min/moment.min.js"></script>
-  <script src="./assets/vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
-
-
-  <script src="./assets/js/custom.min.js"></script>
-
-</body>
+  </body>
 </html>
+
+
+
