adding authorization and authecation

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,8 @@
   <body class="nav-md">
     <div class="container body">
       <div class="main_container">
-       <app-root></app-root>
+       <app-root>
+       </app-root>
     </div>
 
     <!-- jQuery -->
